# Dex-Transactions-Graph

./: .gitignore  DexGraph.py  README.md  swaps.csv
.ipynb_checkpoints/: Dex-Swaps-checkpoint.ipynb
Graph-Makers/: CMakeCache.txt  CMakeLists.txt  Libraries_and_Defines.hpp  Makefile  SwapsReader.cpp  SwapsReader.hpp  cmake_install.cmake  from_pool_graph_maker.cpp  graph-with-limit-maker.py  graph-without-weight-maker.cpp  info-edges-maker.cpp  swaps_to_graph.cpp
PoolAnalyzerWithinTime/: LiquidityPoolsCalculator.cpp
PoolsLiquidities/: LiquidityPoolsCalculator.cpp
PoolsLiquidities/PoolAnalyzerWithinTime/: LiquidityPoolsWithinTime.cpp  config.txt
PriceEstimation/: CoinMarket.py
Without-Weight-Graph/: DexGraph.py  Without-Weight.ipynb
Without-Weight-Graph/.ipynb_checkpoints/: Without-Weight-checkpoint.ipynb
Without-Weight-and-Weighted-Graph/: DexGraph.py  Sushiswap.gexf  Weighted-Graph.ipynb  Without-Weight.ipynb
Without-Weight-and-Weighted-Graph/.ipynb_checkpoints/: Weighted-Graph-checkpoint.ipynb  Without-Weight-checkpoint.ipynb
Without-Weight-and-Weighted-Graph/Results/Centrality/: DegTop50-SushiSwap.txt  DegTop50-Uniswap.txt  EigenTop50-SushiSwap.txt  EigenTop50-Uniswap.txt  PageRankTop50-SushiSwap.txt  PageRankTop50-Uniswap.txt
Without-Weight-and-Weighted-Graph/Results/Components/: Components-not-giant SushiSwap.txt  Components-not-giant Uniswap.txt
info-edges/: edge-info-analyse.py
